--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leticiagouvea/poc-movie-organizer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/leticiagouvea/poc-movie-organizer/issues"
+  },
+  "homepage": "https://github.com/leticiagouvea/poc-movie-organizer#readme"
 }
