--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node -r dotenv/config dist/app.js",
     "dev": "nodemon -r dotenv/config src/app.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "Letícia Gouvêa",
   "license": "ISC",
@@ -18,9 +21,11 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@prisma/client": "^4.9.0",
     "@types/express": "^4.17.15",
     "@types/pg": "^8.6.6",
     "nodemon": "^2.0.20",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
