--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r dotenv/config dist/app.js",
-    "dev": "nodemon -r dotenv/config src/app.ts"
+    "dev": "nodemon -r dotenv/config src/app.ts",
+    "prisma:seed": "npx prisma db seed"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
